# snake_game

./: .gitignore  Board.cpp  CMakeLists.txt  README.md
include/: Board.h  Food.h  Point.h  Snake.h
src/: Board.cpp  Food.cpp  Point.cpp  Snake.cpp  main.cpp
